--- a/package.json
+++ b/package.json
@@ -9,16 +9,32 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
+    "antd": "^4.20.2",
+    "axios": "^0.27.2",
+    "connected-next-router": "^4.1.0",
+    "lodash": "^4.17.21",
     "next": "12.1.6",
+    "next-redux-wrapper": "^7.0.5",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-redux": "^8.0.1",
+    "redux": "^4.2.0",
+    "redux-logger": "^3.0.6",
+    "remixicon": "^2.5.0",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.182",
     "@types/node": "17.0.31",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.3",
+    "@types/redux-logger": "^3.0.9",
+    "@types/redux-mock-store": "^1.0.3",
+    "@types/styled-components": "^5.1.25",
     "eslint": "8.15.0",
     "eslint-config-next": "12.1.6",
+    "redux-mock-store": "^1.5.4",
     "typescript": "4.6.4"
   }
 }
