--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,26 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "incremental": true
+    "incremental": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/components": ["src/components"],
+      "@/containers": ["src/container"],
+      "@/services": ["src/services"],
+      "@/actions": ["src/redux/actions"],
+      "@/middlewares": ["src/redux/middlewares"],
+      "@/reducers": ["src/redux/reducers"],
+      "@/store": ["src/redux/store.ts"],
+      "@/redux": ["src/redux/*"],
+      "@/components/*": ["src/components/*"],
+      "@/shared/*": ["src/_shared/*"],
+      "@/hooks": ["src/hooks"],
+      "@/context": ["src/context"],
+      "@/web3/*": ["src/web3/*"]
+    }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
